...
                                        border: OutlineInputBorder(
                                            borderRadius:
                                                BorderRadius.circular(80))),
                                  ),
                                  const SizedBox(height: 10.0),
                                  TextFormField(
                                    key: const ValueKey('txtEmail'),
                                    controller: emailController,
                                    keyboardType: TextInputType.emailAddress,
                                    onChanged: (value) {
                                      setState(() {
                                        email = value;
                                      });
...
                                        border: OutlineInputBorder(
                                            borderRadius:
                                                BorderRadius.circular(80))),
                                  ),
                                  const SizedBox(height: 10.0),
                                  TextFormField(
                                    key: const ValueKey('txtPassword'),
                                    controller: passwordController,
                                    
                                    obscureText: true,
                                    onChanged: (value) {
                                      setState(() {
                                        password = value;
...
                                            .transparent
                                            .withOpacity(0.38),
                                        disabledBackgroundColor: Colors
                                            .transparent
                                            .withOpacity(0.12),
                                        shadowColor: Colors.transparent),
                                    key: const ValueKey('btnRegister'),
                                    onPressed: () {
                                      User user = User(
                                        name: nameController.text,
                                        email: emailController.text,
                                        password: passwordController.text,
                                      );
...
